--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,8 @@
-#include: package:flutter_lints/flutter.yaml
+include: package:flutter_lints/flutter.yaml
+
+analyzer:
+  plugins:
+    - dart_code_metrics
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
@@ -21,3 +25,4 @@ dart_code_metrics:
     - prefer-trailing-comma
     - prefer-conditional-expressions
     - no-equal-then-else
+    - always-remove-listener
